# zoekt-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
src/: .env.sample  __init__.py  main.py  server.py
src/backends/: __init__.py  client.py  content_fetcher_protocol.py  fetcher.py  models.py  search_protocol.py
src/core/: __init__.py  prompt_manager.py
src/prompts/: prompts.yaml
