[project]
name = "zoekt-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Zoekt code search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Erfan Mirshams", email = "erfan.mirshams@gmail.com" }
]
keywords = ["mcp", "zoekt", "code-search", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp==2.4.0",
    "mcp-server==0.1.4",
    "mcp[cli]==1.11.0",
    "pydantic==2.11.7",
    "pydantic-ai[logfire]==0.4.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.3",
]

[project.scripts]
zoekt-mcp = "zoekt_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zoekt_mcp"]
package-dir = {"zoekt_mcp" = "src"}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length is handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]